--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -45,19 +45,18 @@ p
         <div id = "right_container">
             <h1>ABOUT US</h1>
             <p>
-                We, Gitanshu Impex Private Limited, are Merchant Exporters based at Kolkata, India . We do sourcing of multiple products for Exports directly from manufacturers spread in breadth and length of various cities around India.
+                We, <span><bold>Gitanshu Impex Private Limited</bold></span>, are Merchant Exporters based at Kolkata, India . We do sourcing of multiple products for Exports directly from manufacturers spread in breadth and length of various cities around India.
 We begun our export business with sourcing of Carpenter tools. Gradually we gained trust of our overseas customers. Not only we got rewarded with multiple orders of regular items, we were given the opportunity to source various products of diverse line alongside. We begun sourcing range of products for building construction’s general hardware items; forest/tree cutting saws and blades; rice mill accessories; tea garden’s machinery spares; foot fancy slippers made of PU and so on.
 <br><br>
-We take complete care of our ordered products, inspects cargo as per set standard given to manufacturers with export worthy packing, transporting upto port and supervise stuffing of containers under our own forwarding agents team.
+We have a professional team to take complete care of our ordered products, inspects cargo as per set standard given to manufacturers with export worthy packing, transporting upto port and supervise stuffing of containers under our own forwarding agents team.
 
-                <strong>At present we exports to Myanmar, Sri Lanka, Bangladesh and Kenya.</strong>
+                <span><strong>At present we exports to Myanmar, Sri Lanka, Bangladesh and Kenya.</strong></span>
             </p>
             <h3>Vision</h3>
             <p>Being a leading and reliable international trading company adding sustainable value to stakeholders.</p>
             <h3>Mission</h3>
             <p>• Provide integrated trade solutions to customers to ensure sustainable profits.<br><br>
                 • Focus on being the leading merchant exporter in engineering goods and projects.<br><br>
-                • Being among top three trading companies across segments including Industrial Raw Materials and Commodities.<br><br>
-                • Serve as an effective and accountable instrument of public policy and be socially responsible.</p>
+
         </div>
 {% endblock %}
