--- a/templates/contact_us.html
+++ b/templates/contact_us.html
@@ -79,12 +79,12 @@ h2
     <h1>CONTACT US</h1>
     <h2>Head Office</h2>
     <div id = "details">
-        Siddhamani Appartment, 150N, Binoba Bhave Road, Flat No : N3A <br>Kolkata - 700038, West Bengal, India
-        <br><br> Landmark : Near New Alipore Petrol Pump <br>
+        Siddhamani Apartment, 150N Binoba Bhave Road, Flat No : N3A <br>Kolkata - 700038, West Bengal, India
+        <br>
     </div>
     <h2>Contact Details</h2>
     <div id = "contact_details">
-        
+
         <p style = "font-family: regular_font;">You can contact us anytime in the following mail or phone number</p>
         <ul>
             <li>
