--- a/templates/products.html
+++ b/templates/products.html
@@ -79,7 +79,7 @@ function show_products(this_id)
                         p.textContent = pl[i].name;
                         var br = document.createElement("br");
                         var span = document.createElement("span");
-                        span.textContent = pl[i].products_description;
+                        span.textContent = pl[i].summary;
                         span.className += "product_des";
                         li.appendChild(im);
                         d.appendChild(p);
